# suturo_knowledge

./: .editorconfig  .gitignore  404.html  README.md  SUTURO_Objects.csv  dependencies.rosinstall  index.html  install.rosinstall  mkdocs.yml  workspace.rosinstall
NLP/: README.md
NLP/Grammar etc/nlg_msgs/: CMakeLists.txt  demo_answers.py  nlg.py  nlg_ros.py  package.xml
NLP/depricated/suturo_speech_recognition/: CMakeLists.txt  package.xml
NLP/depricated/suturo_speech_recognition/src/: speechRecognition.py
NLP/suturo_julius/: CMakeLists.txt  package.xml
NLP/suturo_julius/bagfiles/: julius_robot_continue.bag  julius_robot_start.bag  julius_robot_stop.bag
NLP/suturo_julius/dictionaries/: dic_list_grammar.txt  dic_list_hard_commands.txt  dic_list_qa.txt  dic_list_word.txt  dict_grammar.grammar  dict_grammar.voca  dict_single_word.txt
NLP/suturo_julius/dictionaries/examples/grammar1/: grammar_sample.dict  grammar_sample.grammar  grammar_sample.term  grammar_sample.voca
NLP/suturo_julius/dictionaries/examples/grammar2/: dic-list_grammar.txt  julius-gpsr-en.dfa  julius-gpsr-en.dict  julius-gpsr-en.term  julius-gpsr-en.voca
NLP/suturo_julius/dictionaries/examples/word/: dic-list_word.txt  word_sample
NLP/suturo_julius/dictionaries/hard_commands/: hard_commands.grammar  hard_commands.voca
NLP/suturo_julius/dictionaries/original_cmu/: CMU_Sphinx_dic_mini.txt  CMU_Sphinx_dic_mini_1.txt  CMU_Sphinx_dic_mini_1_1.txt  CMU_Sphinx_dic_mini_1_2.txt  CMU_Sphinx_dic_mini_2.txt  blacklist.txt  dic_minimizer.py  dic_spliter.py  dic_translator.py  log.txt
NLP/suturo_julius/dictionaries/other_tasks/: other_tasks.grammar  other_tasks.voca
NLP/suturo_julius/dictionaries/owl_words/: owl_words.grammar
NLP/suturo_julius/dictionaries/qa_system/: qa_system.grammar  qa_system.voca
NLP/suturo_julius/dictionaries/soft_commands/: soft_commands.grammar
NLP/suturo_julius/julius_conf/: common.jconf
NLP/suturo_julius/launch/: julius_qa_system.launch  speech_recognition_grammar.launch  speech_recognition_hard_commands.launch  speech_recognition_word.launch
NLP/suturo_nlg/: CMakeLists.txt  package.xml
NLP/suturo_nlg/msg/: MeaningRepresentation.msg
NLP/suturo_nlg/parameters/: Parameter 1.py  Parameter 2.py  Parameter simplenlg 2.py  Parameter simplenlg 3.py
NLP/suturo_nlg/scripts/: demo_answers.py  demo_answers.py3  demo_answers_ros.py  knowledge_interface.py  knowledge_interface_demo_data.txt  knowledge_interface_test.py  nlg.py  nlg.py3  nlg_ros.py  object_translate  qa_demo_data_adder.py
NLP/suturo_speechparser/: CMakeLists.txt  package.xml
NLP/suturo_speechparser/launch/: hard_commands_only.launch  qa_system.launch  speechparser.launch
docs/: README.md  index.md  objects.md  planning-interface.md
knowledge/: CMakeLists.txt  package.xml
knowledge/docs/source/: index.rst
knowledge/docs/source/pages/: launchfile.rst
knowledge/docs/source/pages/diagrams/: create_obj_1.puml  reachable_api.puml
knowledge/docs/source/pages/prolog src/: export.rst  init.rst  interface.rst  object_state.rst  reachable.rst  spatial.rst  urdf.rst
knowledge/docs/source/pages/scripts/: store_object_info_server.rst
knowledge/docs/source/pages/user_guides/: current_state.rst
knowledge/launch/: knowledge.launch  knowledge31.launch  knowledge_corona_sim_v1.launch  knowledge_gazebo_E1.launch  knowledge_local.launch  knowledge_sim_1.launch  knowledge_sim_2.launch  lab_publisher.launch  rosprolog.launch
knowledge/owl/: catalog-v001.xml  color.owl  locations.owl  locations.rdf  objects.owl  robocup.owl  rooms.owl  shelf_example.owl  testing.owl
knowledge/owl/locations/: robocup_demo_2_locations.owl  robocup_practice_easy_locations.owl
knowledge/owl/maps/: catalog-v001.xml
knowledge/prolog/: assignplaces.pl  beliefstate.pl  config.pl  export.pl  gripper.pl  init.pl  mocking.pl  nlg.pl  object_state.pl  pickup.pl  spatial_comp.pl  spatial_comp.plt  static_preset.pl  surfaces.pl  surfaces.plt  surfaces2.pl  urdf.pl
knowledge/scripts/: demo_action_client.py  gripping_subscriber.py  manipulation_listener.py  manipulation_subscriber.py  marker_objectstate.py  my_node.py  neem_wrapper.py  neem_wrapper_2.py  object_state_publisher.py  store_object_info_server.py  store_object_info_server2.py
knowledge/src/: __init__.pl  algebra.pl  algorithms.pl  assignplaces.pl  assignplaces.plt  beliefstate.pl  beliefstate.plt  config.pl  conftest.pl  doors.pl  doors.plt  evaluate_next_object.pl  export.pl  furnitures.pl  gripper.pl  gripper.plt  neems.pl  next_object.pl  object_state.pl  object_state.plt  pickup.pl  pickup.plt  planning_neems.pl  reachable.pl  rooms.pl  rooms.plt  spatial_comp.pl  spatial_comp.plt  static_preset.pl  surfaces.pl  surfaces.plt  test.pl  urdf.pl  urdf.plt
knowledge/src/applications/: __init__.pl  clean_table.pl  evaluate_next_object.pl  next_object.pl  path_finder.pl
knowledge/src/gripper/: README.md  __init__.pl  grasping.pl  gripper_info.pl  open_door.pl  placing.pl  placing.plt
knowledge/src/locations/: actual_locations.pl  misplaced.pl  predefined_locations.pl  spatial_comp.pl
knowledge/src/model/environment/: __init__.pl  doors.pl  drawers.pl  furnitures.pl  rooms.pl  surfaces.pl  surfaces.plt
knowledge/src/model/objects/: README.md  object_creation.pl  object_info.pl  object_manipulation.pl
knowledge/src/naturallanguage/: __init__.pl  nlp.pl  to_text.pl
knowledge/src/naturallanguage/color/: nlp_color.cpp  nlp_color.pl
knowledge/src/neems/: README.md  __init__.pl  neem_logging_guide.md
knowledge/src/neems/logging/: __init__.pl  general_logging.pl  general_logging2.pl  manipulation_logging.pl  mental_logging.pl  mental_logging.plt  navigation_logging.pl  older_neems.pl  older_neems2.pl  perception_logging.pl
knowledge/src/objects/: __init__.pl  object_creation.pl  object_info.pl  object_manipulation.pl  object_state.pl  object_validation.pl
knowledge/urdf/: gz_sim_v1_openable_door.urdf  hsrb_lab.urdf  hsrb_sim_v1.urdf  robocup_sim_t1.urdf  robocup_sim_t2.urdf  suturo_rooms.urdf
knowledge_1920/: CMakeLists.txt  package.xml
objects/: index.html
(+226 files in other folders)
