<?xml version="1.0"?>
<package format="2">
  <name>knowledge</name>
  <version>0.1.0</version>
  <description>Knowledge-Package for SUTURO in 2019/2020</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="paul@todo.todo">paul</maintainer>
  <maintainer email="thun@uni-bremen.de">Jeremias Thun</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>urdfprolog</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>knowrob_common</build_export_depend>
  <build_export_depend>urdfprolog</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>knowrob_common</exec_depend>
  <exec_depend>urdfprolog</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
