<?xml version="1.0"?>
<package format="2">
  <name>suturo_julius</name>
  <version>0.0.0</version>
  <description>The suturo_julius package</description>

  <maintainer email="schnippa@uni-bremen.de">Paul Schnipper</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
