<?xml version="1.0"?>
<package format="2">
  <name>suturo_speech_recognition</name>
  <version>0.0.0</version>
  <description>The speech_recongnition package</description>

  <maintainer email="paul@todo.todo">paul</maintainer>

<license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
